--- a/libros/templates/libros/biblioteca_compartida.html
+++ b/libros/templates/libros/biblioteca_compartida.html
@@ -19,15 +19,31 @@
 
 <div class = "col-md-8">
 
-{% if libros_bcompartida %}
 <br>
 <div class = "well">
 	<p>
 		<strong>
 			Reglas:<br>
 		</strong>
-			Puedes <strong>cambiar un libro</strong> por otro o pedirlo. El administrador de la <strong>Biblioteca Compartida</strong> debe aceptar el cambio o el préstamo.<br>
-			Si deseas <strong>pedir un libro prestado</strong>, debes estar registrado en <strong>Letras.Club</strong> y dar click en el botón "Pedir Libro". 
+        El administrador de la Biblioteca Compartida <strong>debe aceptar</strong> cualquier cambio.<br>
+        {% if biblioteca_compartida.tipo.nombre == "biblioteca_cerrada" %}
+            <br>Ésta es una <strong>Biblioteca Cerrada</strong>. Es decir, no tiene un local constantemente abierto,
+            debes <strong>contactarte</strong> con el administrador antes de intercambiar un libro. <br>
+            <strong>No dudes</strong> en llamarle o enviarle un mensaje!
+            el administrador estará feliz de realizar un intercambio.
+        {% elif biblioteca_compartida.tipo.nombre == "andoteca" %}
+            <br>Ésta es una <strong>Andoteca</strong>. Es decir, está abierta a que cualquier persona tome un libro sin
+            dejar uno a cambio, y también a que cualquier persona deje un libro como donación <i class = "fa fa-smile-o"></i>. Se <strong>actualizan</strong>
+            los títulos disponibles periódicamente.
+        {% else %}
+            <br>Ésta es una <strong>Biblioteca Abierta</strong>. Es decir, es un <i class = "fa fa-thumbs-o-up"></i> lugar que se ha unido
+            a la red de libros compartidos.
+        {% endif %}
+
+        {% if biblioteca_compartida.reglas_extra %}
+            <br><br>
+            <i class = "fa fa-comment"></i> {{ biblioteca_compartida.reglas_extra }}
+            {% endif %}
 	</p>
 </div>
 <h1> Libros </h1>
@@ -82,13 +98,6 @@
 			</div>
 		</div>
 	</div>
-
-{% else %}
-
-<h1><small> No hay libros disponibles en {{biblioteca_compartida.nombre}} </small></h1>
-
-{% endif %}
-
 </div>
 
 <div class = "col-md-4">
@@ -125,7 +134,10 @@
 	
 	<div class = "col-md-8">		
 		<div class="testimonial classic">
-			<p>{{biblioteca_compartida.direccion}}</p>
+			<p>{{biblioteca_compartida.direccion}}</p><br>
+            {% if biblioteca_compartida.tipo.nombre == "biblioteca_abierta" %}
+                <p>Horarios: {{ biblioteca_compartida.horario_apertura }} </p>
+            {% endif %}
 		</div>
 	</div>
 
