--- a/libros/templates/libros/busqueda.html
+++ b/libros/templates/libros/busqueda.html
@@ -90,7 +90,7 @@ $(document).ready(function(){
 
 	$("#elegir_titulo").on("click", function(e){
 		e.preventDefault();
-		$("#elegir_autor").removeClass("active")
+		$("#elegir_autor").removeClass("active");
 		$("#form_buscar_autor").addClass("hidden");
 		$("#form_buscar_titulo").removeClass("hidden");
 	});
