--- a/perfiles/templates/perfiles/perfil_propio_libros.html
+++ b/perfiles/templates/perfiles/perfil_propio_libros.html
@@ -181,7 +181,7 @@
 			<div class="alert alert-default"><!-- INFO -->
 				<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">X</span></button>
 				<strong>No has pedido ningún libro ni tienes un libro prestado.</strong>
-				Si deseas, busca un <a href="{% url 'libros:libros_ciudad' 'quito' '18' 'titulo' %}">libro disponible</a> en Quito
+				Si deseas, busca un <a href="{% url 'libros:libros_ciudad' 'quito' '18' %}">libro disponible</a> en Quito
 			</div>
 
 		{% endif %}
