--- a/libros/templates/libros/libros_ciudad.html
+++ b/libros/templates/libros/libros_ciudad.html
@@ -10,7 +10,7 @@
 	<div class="container parallax-content">
 		<div class="row">
 			<div class="col-md-5 col-sm-5 col-md-offset-1">
-				<h3> Libros disponibles en <strong>{{ciudad.name}}</strong></h3>
+				<h3> Intercambio de libros en <strong>{{ciudad.name}}</strong></h3>
 			</div>
 		</div>
 	</div>
@@ -22,120 +22,94 @@
 <div class="navbar-collapse nav-main-collapse collapse">
 	<nav class="nav-main">
 		<ul id="topMain" class="nav nav-pills nav-main">
-			{% if user.is_authenticated %}
-				<li><a href="{% url 'libros:nuevo_libro' 'perfil' user.username %}"><i class="fa fa-book"></i> Compartir un Libro</a></li>
-				<li><a href="{% url 'grupos:crear_grupo' %}"><i class="fa fa-group"></i> Crear un Grupo</a></li>
-			{% else %}
-				<li><a href="{% url 'libros:main' %}"><i class="fa fa-lock"></i> Compartir un Libro</a></li>
-				<li><a href="{% url 'libros:main' %}"><i class="fa fa-lock"></i> Crear un Grupo</a></li>
-			{% endif %}
+            <!--
 			<li><a href=""><i class="fa fa-map-marker"></i> Buscar otras Ciudades</a></li>
+			-->
 		</ul>
 	</nav>
 </div>
 <!-- /Top Nav -->
 
-<div id="mapa_ciudad" data-url-cincobcompartida="{% url 'libros:cinco_bcompartida' %}" class=""><!-- map container --></div>
+<div class = "row">
+    <hr class = "half-margins invisible">
+    <div class = "col-md-8">
+        <div id="mapa_ciudad" data-url-cincobcompartida="{% url 'libros:cinco_bcompartida' %}" class=""><!-- map container --></div>
+    </div>
+    <div class = "col-md-4">
+        <!-- facebook -->
+        <div class="fb-page" data-href="https://www.facebook.com/letras.club" data-hide-cover="false" data-show-facepile="true"
+         data-show-posts="false" height="600"
+         data-tabs="timeline">
+        <div class="fb-xfbml-parse-ignore">
+        <blockquote cite="https://www.facebook.com/facebook">
+        <a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div></div>
+    </div>
+</div>
 
 <div class = "col-md-8">
-	<!--
-	<a href="{% url 'libros:buscar_ciudad' %}" class="pull-right">Buscar libros en otra ciudad <i class="fa fa-external-link-square"></i></a>
-	-->
+
 	<hr class =" half-margins invisible">
 
-	{% if filtro == "autor" %}
-	
-	<div class="widget">
-		<form method="get" action="{% url 'libros:buscar' 'quito' 'autor' %} " class="input-group">
-			<input type="text" class="form-control" name="q" placeholder="Buscar Autor" />
-			<span class="input-group-btn">
-				<button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-			</span>
-		</form>
-	</div>
+    <div>
+        <div class="btn-toolbar pull-right" role="toolbar">
+            <div class="btn-group btn-group">
+                <button id="elegir_autor" type="button" class="btn btn-default active">Autor</button>
+                <button id="elegir_titulo" type="button" class="btn btn-default">Título</button>
+            </div>
+        </div>
+
+        <form id="form_buscar" method="get" action="" class="input-group">
+            <input id="busqueda_input" type="text" class="form-control"
+                   name="q" placeholder="Buscar por autor"/>
+            <input id="busqueda_filtro" type="hidden" name="filtro" value="autor">
+            <span class="input-group-btn">
+                <button id="buscar_libro" class="btn btn-primary"><i class="fa fa-search"></i></button>
+            </span>
+        </form>
+    </div>
+
+    <p class="pull-right"><small>Actualmente hay <strong>{{num_libros_disponibles}}
+    </strong> libros compartidos en {{ciudad.name}}.</small></p>
 	<br>
-	<div class="btn-group">
-	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Ordenar por Autor <i class ="fa fa-pencil"></i></button>
-	  <ul class="dropdown-menu" role="menu">
-		<li><a href="{% url 'libros:libros_ciudad' 'quito' '18' 'titulo' %}">Ordenar por Título <i class="fa fa-book"></i> </a></li>
-	  </ul>
-	</div><!-- /btn-group -->
 
-	{% else %}
-	
-	<div class="widget">
-		<form method="get" action="{% url 'libros:buscar' 'quito' 'titulo' %}" class="input-group">
-			<input type="text" class="form-control" name="q" placeholder="Buscar Título" />
-			<span class="input-group-btn">
-				<button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-			</span>
-		</form>
+	<div class="divider">
+		<i class="fa fa-book"></i>
 	</div>
-	<br>
-	<div class="btn-group">
-	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Ordenar por Título <i class ="fa fa-book"></i></button>
-	  <ul class="dropdown-menu" role="menu">
-		<li><a href="{% url 'libros:libros_ciudad' 'quito' '18' 'autor' %}">Ordenar por Autor <i class="fa fa-pencil"></i> </a></li>
-	  </ul>
-	</div><!-- /btn-group -->
-	
-	{% endif %}
 
-	<div class="divider"><!-- divider -->
-		<i class="fa fa-chevron-down"></i>
-	</div>
-	
-	<br>
-	{% for l in libros_disponibles %}	
-		<div class="alert callout alert-default">
-			<div class="row">
-				<div class="col-md-9 col-sm-9"><!-- left text -->
-					<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}} </h4>
+    <p id = "nota_lista_libros">Últimos libros compartidos:</p>
+    <div id = "libros">
+        <p><a class="pull-right" href="{% url 'libros:lista_libros_ciudad' ciudad.slug 'autor' %}">Ver todos los libros compartidos en Quito
+            <i class = "fa fa-list-ul"></i></a></p>
+        <br>
+        {% for l in lista_libros_disponibles %}
+            <div class="alert callout alert-default">
+                <div class="row">
+                    <h6><a href="">{{ l.biblioteca_compartida.nombre }} </a> - <strong>{{l.libro.titulo}}</strong> {{l.libro.autor}}
+                    </h6>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
-                    {% if l.biblioteca_compartida %}
-                        <a href="{% url 'libros:biblioteca_compartida' l.biblioteca_compartida.slug %} ">{{ l.biblioteca_compartida.nombre }}</a>
-                    {% else %}
-                        <a href="{% url 'perfiles:perfil_usuario' l.perfil.usuario.username %}">
-                            <i class = "fa fa-user"></i>{{l.perfil.usuario.username}}
-                        </a>
-                    {% endif %}
-				</div>
-
-                {% if l.biblioteca_compartida %}
-
-                {% else %}
-                    {% if l.perfil != perfil_usuario and user.is_authenticated %}
-                    <!-- Si el usuario es dueño de su libro no puede pedirlo prestado -->
-                    <div class="col-md-3 col-sm-3 text-right">
-                        <a href="{% url 'libros:pedir_libro' l.id %}" rel="nofollow" target="_blank" class="btn btn-default btn-lg">Pedir Libro</a>
-                    </div>
-                    {% endif %}
-                {% endif %}
-			</div>
-		</div>
-	{% endfor %}
-
-	<ul class="pagination">
-	 	{% if paginator.has_previous %}
-		<li><a href="?page={{ paginator.previous_page_number }}">&laquo;</a></li>
-		{% else %}
-		<li class="disabled"><a>&laquo;</a></li>
-        {% endif %}
-       
-		{% for numero_pagina in paginator.page_range %}
-			<li class="{% if numero_pagina == libros_disponibles.number %}active{% endif %}"><a href="?page={{numero_pagina}}">{{numero_pagina}}</a></li>
-		{% endfor %}
-		
-		{% if paginator.has_next %}
-            <a href="?page={{ paginator.next_page_number }}">&raquo;</a>
-        {% else %}
-        <li class="disabled"><a class="disabled">&raquo;</a></li>
-        {% endif %}
-	</ul>
+    <hr class = "invisible">
 </div>
 
 <div class = "col-md-4">
-	<hr class="half-margins invisible" /><!-- divider 30px -->
+
+    <hr class="half-margins invisible" /><!-- divider 30px -->
+
+    <button class = "btn btn-primary" onclick="window.location.href='{% url 'perfiles:login' %}';">
+        Administradores de Bibliotecas Compartidas <i class = "fa fa-sign-in"></i> </button>
+
+    <br>
+
+    <div>
+        <br><br>
+        <p>
+            Tienes libros que quieras <a href="{% url 'perfiles:contactanos' 'donacion' %}">
+            <span class="styleColor"><strong>donar</strong><i class = "fa fa-send-o"></i></span></a>?
+        </p>
+    </div>
 
 	{% if grupos_abiertos %}
 		<h4> Grupos abiertos en Quito </h4>
@@ -145,7 +119,7 @@
 		{% endfor %}
 	{% endif %}
 
-	<hr class = "half-margins invisible"></hr>
+	<hr class = "half-margins invisible">
 
 	{% if grupos_usuario %}
 		<h4> Tus Grupos </h4>
@@ -154,8 +128,7 @@
 			<br>
 		{% endfor %}
 	{% endif %}
-	
-	
+
 	<hr class="half-margins invisible" /><!-- divider 30px -->
 	
 	<h4> Bibliotecas Compartidas</h4>
@@ -185,37 +158,32 @@
 		<small>Registrar una Biblioteca Compartida en {{ciudad.name}}</small>
 	</a>
 	
-	<div class ="divider"></div>
-
-	<p class ="well">
-	Actualmente hay <strong>{{num_libros_disponibles}}</strong> libros compartidos en {{ciudad.name}}.
-
-	</p>
-
-	<p class ="well alert-info">
-        <i class ="fa fa-info-circle"></i>
-        Los libros compartidos son libros <strong>físicos</strong> (no digitales) que los miembros de la comunidad han aceptado cambiar o prestar. <br>
-	</p>
-
-	<!-- facebook -->
-	<div class="fb-page" data-href="https://www.facebook.com/letras.club" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div></div>
-	
 </div>
 {% endblock content %}
 
-
 {% block extra_javascript %}
     <script src="http://maps.googleapis.com/maps/api/js?v=3"></script>
-    <script>
+    <script src="{% static 'assets/js/jquery.loadTemplate-1.5.0.js' %}"></script>
 
+    <script type="text/html" id="resultado_busqueda">
+        <div class="alert callout alert-default">
+            <div class="row">
+                <h6><a data-href="url_bcompartida" data-content="nombre_bcompartida"></a> -
+                    <strong data-content="libro_titulo"></strong> <span data-content="libro_autor"></span>
+                </h6>
+            </div>
+        </div>
+    </script>
+
+    <script>
     $(document).ready(function(){
 
         var gmaps_bcompartidas = JSON.parse('{{ gmap_bcompartidas|safe }}');
 
-        markers = [];
+        var markers = [];
 
         $.each(gmaps_bcompartidas, function(index, value){
-            marker = [value[0], value[1], value[2], value[3]];
+            var marker = [value[0], value[1], value[2], value[3], value[4]];
             markers.push(marker);
         });
 
@@ -275,7 +243,6 @@
             }
 
             for (i = 0; i < markers.length; i++) {
-                console.log(markers[i]);
                 marker = new google.maps.Marker({
                     position: new google.maps.LatLng(markers[i][1], markers[i][2]),
                     map: map,
@@ -283,6 +250,15 @@
                 });
 
                 sumarMensaje(marker, markers[i][3]);
+
+                if(markers[i][4]=="andoteca"){
+                    marker.setIcon("{% static 'assets/images/letrasclub/marker_andotecas.png' %}");
+                } else if(markers[i][4]=="biblioteca_cerrada"){
+                    marker.setIcon("{% static 'assets/images/letrasclub/marker_bcerrada.png' %}");
+                } else{
+                    marker.setIcon("{% static 'assets/images/letrasclub/marker_bcabierta.png' %}");
+                }
+
                 marker_objects.push(marker);
             }
 
@@ -297,7 +273,57 @@
 
         initMap();
 
-    });
+        // Buscar libro
+        $("#elegir_autor").on("click", function(e){
+            e.preventDefault();
+            $("#busqueda_input").attr("placeholder", "Buscar por autor");
+            $("#busqueda_filtro").attr("value", "autor");
+            $("#elegir_titulo").removeClass("active");
+            $("#elegir_autor").addClass("active");
+        });
 
+        $("#elegir_titulo").on("click", function(e){
+            e.preventDefault();
+            $("#busqueda_input").attr("placeholder", "Buscar por titulo");
+            $("#busqueda_filtro").attr("value", "titulo");
+            $("#elegir_autor").removeClass("active");
+            $("#elegir_titulo").addClass("active");
+        });
+
+        $("#buscar_libro").on("click", function(e){
+            e.preventDefault();
+            $("#libros").html('<div class = "well"> <i class = "centrar fa fa-circle-o-notch fa-spin"></i> </div>');
+
+            var q = $("#busqueda_input").val();
+            var filtro = $("#busqueda_filtro").val();
+
+            $.ajax({
+                method: "get",
+                url: "{% url 'libros:buscar_ajax' ciudad.id %}",
+                data: {'q': q, 'filtro': filtro},
+                success: function(response){
+                        var libros_encontrados = JSON.parse(response);
+
+                        $("#libros").html("");
+
+                        $("#nota_lista_libros").html("<strong>"+ libros_encontrados.length + "</strong> libros encontrados");
+
+                        $(libros_encontrados).each(function(index, value){
+                            var el = $("<div/>");  // es necesario para el loadTemplate
+                            var linea_libro = el.loadTemplate($("#resultado_busqueda"),{
+                                url_bcompartida : value.url_bcompartida,
+                                nombre_bcompartida: value.nombre_bcompartida,
+                                libro_autor: value.autor,
+                                libro_titulo: value.titulo
+                            });
+                            $("#libros").append(linea_libro);
+                        });
+                    },
+                error: function(response){
+                        alert("Hubo un error. Disculpa las molestias.")
+                    }
+            });
+        });
+    });
     </script>
 {% endblock extra_javascript %}
