--- a/libros/templates/libros/nuevo_libro.html
+++ b/libros/templates/libros/nuevo_libro.html
@@ -2,14 +2,14 @@
 {% load staticfiles %}
 
 {% block content %}
-
 <div class = "col-md-6 col-md-offset-1">
 	<br>
-	<form id="form_compartir_libro" class="form-horizontal" action="{% url 'libros:nuevo_libro' tipo_dueno username %}" method="post">
+	<form id="form_compartir_libro" class="form-horizontal" action="{% url 'libros:nuevo_libro' tipo_dueno biblioteca_compartida.slug %}" method="post">
 		{% csrf_token %}		
 			<fieldset>
 				{{form}}
 			<br>
+            </fieldset>
 			<input class = "btn btn-success pull-right" type="submit" value="Compartir">	
 	</form>
 	<hr class = "invisible">
@@ -17,37 +17,8 @@
 
 <div class ="col-md-4">
 	<hr class="invisible half-margins">
-	<p class ="well">
-	<i class = "fa fa-info-circle"></i>		
-		El usuario al que le prestes este libro en el futuro podrá contactarte de las siguientes maneras:
-		<br>
-		<br>
-
-		{% if user.email %}
-			Tu correo electrónico: {{user.email}}
-		{% else %}
-			No tienes un correo electrónico registrado
-		{% endif %}
-
-		<br>
-
-		{% if perfil_usuario.numero_telefono_contacto %}
-			Tu número de teléfono: {{perfil_usuario.numero_telefono_contacto}}
-		{% else %}
-			<br>No tienes un número de contacto registrado. Por favor <a href="{% url 'perfiles:editar_perfil' %}">edita tu perfil</a> y añade un número de teléfono de contacto.
-		{% endif %}
-
-		<br><br>
-
-		Las formas de contactarte que especifiques en tu mensaje de aceptación cuando le prestes el libro.
-
-		<br><br>
-
-		<i class ="fa fa-user-secret"></i> No usamos tus números de teléfono ni tu email para ningún otro fin.
-		
-	</p>
+    <img src="{{ biblioteca_compartida.imagen}} " class = "thumbnail img-responsive" alt="">
 </div>
-
 {% endblock content %}
 
 
