--- a/templates/contactanos.html
+++ b/templates/contactanos.html
@@ -1,30 +1,31 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block content %}
+<div class = "row">
+    <hr class = "half-margins invisible">
 
-<hr class = "half-margins invisible">
-
-<div class = "col-md-6 col-md-offset-1">
-	{% if razon_contacto == "registrar_biblioteca" %}
-	<h4>Para registrar una nueva Biblioteca Compartida, necesitamos conocernos: </h4>
-	{% endif %}
-	<form class="form-horizontal" action="{% url 'perfiles:contactanos' 'registrar_biblioteca' %}" method="post">
-		{% csrf_token %}		
-			<fieldset>
-			<br>
-				{{form}}
-			<br>
-			<input class = "btn btn-success pull-right" type="submit" value="Enviar">
-			<hr class = "invisible">
-	</form>
+    <div class = "col-md-6 col-md-offset-1">
+        {% if razon_contacto == "registrar_biblioteca" %}
+            <h4>Para registrar una nueva Biblioteca Compartida, necesitamos conocernos: </h4>
+        {% elif razon_contacto == "donacion" %}
+            <h4>Gracias por donar tus libros!, hay miles de lectores que podrán encontrarlos nuevamente.</h4>
+        {% endif %}
+        <form class="form-horizontal" action="{% url 'perfiles:contactanos' razon_contacto %}" method="post">
+            {% csrf_token %}
+                <fieldset>
+                <br>
+                    {{form}}
+                <br>
+                <input class = "btn btn-success pull-right" type="submit" value="Enviar">
+                <hr class = "invisible">
+        </form>
+    </div>
+    <div class = "col-md-4">
+        <hr class = "invisible">
+        <p class = "gray">
+            Gracias por contactarnos, te responderemos lo antes posible.
+        </p>
+    </div>
 </div>
-<div class = "col-md-4">
-	<hr class = "invisible">
-	<p class = "gray">		
-		Gracias por contactarnos, te responderemos lo antes posible.
-	</p>
-</div>
-<script type="text/javascript">	
-</script>
-
 {% endblock content %}
