--- a/templates/mantenimiento.html
+++ b/templates/mantenimiento.html
@@ -37,7 +37,7 @@
 			<p>
 
 				<!-- custom text -->
-				Estamos cambiando, el <strong>Domingo 13 de Diciembre</strong> regresaremos. Reabriremos con <strong>Nuevas Funcionalidades</strong>!
+				Estamos cambiando, el <strong>Domingo 3 de Marzo</strong> regresaremos. Reabriremos con <strong>Nuevas Funcionalidades</strong>!
 				<!-- /custom text -->
 
 			</p>
