--- a/libros/templates/libros/inicio.html
+++ b/libros/templates/libros/inicio.html
@@ -70,7 +70,7 @@
 	<body class="smoothscroll">
 
         <div class = "parallax_entrada" style="width: auto; height: 800px;" id="video_libros"
-              data-vide-bg="mp4: {% static 'assets/video/video_home.mp4' %}, poster: {% static 'assets/video/portada_video2.jpg' %}"
+              data-vide-bg="mp4: https://s3.amazonaws.com/epona/assets/video/video_home.mp4, poster: https://s3.amazonaws.com/epona/assets/video/portada_video2.jpg"
               data-vide-options="loop: true, muted: false, position: 0% 0%">
 
             <div class = "col-md-10 col-md-offset-1 container_titulo">
