--- a/libros/templates/libros/inicio.html
+++ b/libros/templates/libros/inicio.html
@@ -118,11 +118,10 @@
                                                     <strong>{{ biblioteca.direccion }}</strong>
                                                 </span>
                                             </a>
-                                            <img class="img-responsive foto_bcompartida_home" src="{{biblioteca.imagen}}" alt="">
+                                            <img class="foto_bcompartida_home" src="{{biblioteca.imagen}}" alt="">
                                         </figure>
                                         <div class="item-box-desc">
                                             <h4>{{ biblioteca.nombre }}</h4>
-                                            <small class="styleColor">56 Libros Disponibles</small>
                                         </div>
                                     </div>
                                 </li>
